@@ -46,6 +46,25 @@
 	$tresult = mysql_query($tquery) or die("phpmyfamily: Error creating tracking table!!!");
 	echo "tracking table created<br>\n";
 
+	// alter the documents table
+	$aquery = "ALTER TABLE `".$tblprefix."documents` ADD `id` SMALLINT UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT PRIMARY KEY FIRST";
+	$aresult = mysql_query($aquery) or die("phpmyfamily: Error altering documents table!!!");
+	echo "documents table altered<br>\n";
+
+	// rename all the files
+	$fquery = "SELECT * FROM ".$tblprefix."documents";
+	$fresult = mysql_query($fquery) or die("phpmyfamily: Error reading documents table!!!");
+	while ($frow = mysql_fetch_array($fresult)) {
+		if (!rename("../".$frow["file_name"], "../docs/".$frow["id"]))
+			die("phpmyfamily: Error renaming files");
+	}
+	echo "all files renamed<br>\n";
+
+	// alter the names in the database
+	$dquery = "UPDATE ".$tblprefix."documents SET file_name = SUBSTRING_INDEX(file_name, 'docs/', -1 )";
+	$dresult = mysql_query($dquery) or die("phpmyfamily: Error updating documents table");
+	echo "documents table updated<br>\n";
+
 	// give a link to continue
 	echo "<h3>Finished!!</h3>\n";
 	echo "Click <a href=\"../index.php\">here</a> to continue.\n";
