@@ -1,3 +1,4 @@
+	First working version of transcript spoofing
 	Nasty fix for imagecreate_wrapper
 	ammendable max and min image size added
 	census summary added
